--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,5 @@
 body {
     background: url("../images/amethyst-geode-cluster-wallpaper.png");
-    background-color: grey;
   }
   .container {
     max-width: 100%;
@@ -11,9 +10,13 @@ body {
     text-align: center;
     margin: 20px;
     padding: 10px;
+    opacity: 0.7;
   }
   h1 {
-    font-size: 40px;
+    font-size: 35px;
+  }
+  .title {
+    font-size: 45px;
   }
   #instructions {
     background-color: whitesmoke;
@@ -21,6 +24,7 @@ body {
     text-align: left;
     margin: 20px;
     padding: 10px;
+    opacity: 0.7;
   }
   h3 {
     font-size: 24px;
@@ -32,25 +36,31 @@ body {
   h2 {
     font-size: 24px;
   }
+  .instructions {
+      font-size: 40px;
+  }
   #gameScore {
-    background-color: green;
+    background-color: lightgreen;
     color: black;
     text-align: center;
     padding: 15px;
+    opacity: 0.7;
   }
   #winScore {
-    background-color: #00ffff;
+    background-color: lightgreen;
     color: black;
     text-align: center;
     padding: 5px;
     margin-top: 5px;
+    opacity: 0.7;
   }
   #lossScore {
-    background-color: #00ffff;
+    background-color: lightgreen;
     color: black;
     text-align: center;
     padding: 5px;
     margin-bottom: 5px;
+    opacity: 0.7;
   }
   .crystals {
     margin: 20px;
@@ -61,9 +71,10 @@ body {
     width: 150px;
   }
   #playerScore {
-    background-color: #29a3a3;
-    color: white;
+    background-color: lightgreen;
+    color: black;
     margin: 20px;
     padding: 15px;
     text-align: center;
+    opacity: 0.7;
   }
